# power-dispatch-studio

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: archive.yml  ci.yml
data/derived/: admin_dispatch.json  joint_lp_probe.json  loss_surface.json  nodal_dcopf.json  price_model_probes.json  ramp_probe.json  rtdoe5_replay.json  settlement_sample.json  subhourly_probe.json  (+1 more)
docs/: enhancement-roadmap-20260712.md  highs-solver-scope.md  latent-bugs.md  linkedin-draft.md  linkedin-post.md  research-launch-20260705.md  visual-system.md
pipeline/: admin_dispatch.py  archive_iemop.py  archive_rtdoe.py  bill.py  build_data.py  build_exports.py  chrono.py  constants_ph.py  coupled_dispatch.py  dispatch.py  fetch_grid_geometry.py  fleet_doe.py  fleet_ph.py  grid_geometry.py  joint_lp_probe.py  loss_surface.py  lp_dispatch.py  lp_model.py  market_obs.py  merit_order.py  nodal_dcopf.py  nodal_obs.py  nodal_prices.py  offers.py  pasa.py  price_model_probes.py  profiles.py  ramp_probe.py  reserve.py  reserve_offers.py  reserve_results.py  resource_locate.py  rtdoe5_replay.py  scenario_validation.py  settlement_side.py  subhourly_probe.py  vre_probe.py
scripts/: bill_wedge.py  constraint_league_gif.py  og_card.py  price_spread_gif.py  stat_card.py  story_montage.py  sual_margin_gif.py  verify_claims.py  wesm_roles.py
studio/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.setup.ts
tests/: e2e.sh  qa_gate.py  test_data.py  test_engine_sync.py  test_lp_parity.py
tools/: sync_engine.py
web/: index.html  methodology.html  serve.py
(+1605 files in other folders)
